# stm32-api-generator

./: Cargo.toml  README.md  gen-sample.sh
specs/clock/: stm32f303.ron
specs/svd/: stm32f303.svd.patched
specs/timer/: stm32f303.json5
src/: file.rs  logging.rs  main.rs  system_info.rs
src/generators/: filters.rs  gpio.rs  mod.rs  spi.rs  timer.rs
src/system/: gpio.rs  mod.rs  spi.rs  timer.rs
svd/: stm32f301.svd.patched  stm32f302.svd.patched  stm32f303.svd.patched  stm32f373.svd.patched  stm32f3x4.svd.patched  stm32f3x8.svd.patched  stm32f401.svd.patched  stm32f405.svd.patched  stm32f407.svd.patched  stm32f410.svd.patched  stm32f411.svd.patched  stm32f412.svd.patched  stm32f413.svd.patched  stm32f427.svd.patched  stm32f429.svd.patched  stm32f446.svd.patched  stm32f469.svd.patched  stm32f730.svd.patched  stm32f745.svd.patched  stm32f765.svd.patched  stm32f7x2.svd.patched  stm32f7x3.svd.patched  stm32f7x6.svd.patched  stm32f7x7.svd.patched  stm32f7x9.svd.patched  stm32l0x1.svd.patched  stm32l0x2.svd.patched  stm32l0x3.svd.patched  stm32l4x1.svd.patched  stm32l4x2.svd.patched  stm32l4x3.svd.patched  stm32l4x5.svd.patched  stm32l4x6.svd.patched
templates/: .rustfmt.toml.askama  Cargo.toml.askama  lib.rs.askama
templates/clocks/: default.rs.askama  f303.rs.askama  mod.rs.askama
templates/gpio/: mod.rs.askama  peripheral.rs.askama
templates/includes/: Cargo.toml.askama  memory.x.askama
templates/spi/: mod.rs.askama  peripheral.rs.askama
templates/timer/: mod.rs.askama  peripheral.rs.askama
templates/timers/: mod.rs.askama  peripheral.rs.askama
(+7 files in other folders)
