[package]
name = "stm32-api-generator"
version = "0.1.0"
authors = ["Ross Tollefson <ross@past9systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
askama = "0.9.0"
heck = "0.3.1"
clap = "2.33.1"
glob = "0.3.0"
fstrings = "0.2.3"

[dependencies.svd-expander]
path = "../svd-expander"
version = "0.4.0"
